--- a/app/scss/_nav.scss
+++ b/app/scss/_nav.scss
@@ -183,7 +183,7 @@ nav {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 505px) {
   #search-bar-form {
     width: 57%;
     margin-right: 35%;
